修改配色，对话气泡加入头像，修改导航栏，修改首页顶部图片。

--- a/Collaboration.html
+++ b/Collaboration.html
@@ -6,8 +6,8 @@
     <title>Collaboration</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/nav.css">
-    <link rel="stylesheet" href="css/bubbles.css">
-    <link rel="stylesheet" href="css/slideshow.css">
+    <!--<link rel="stylesheet" href="css/bubbles.css">-->
+    <!--<link rel="stylesheet" href="css/slideshow.css">-->
     <link rel="stylesheet" href="css/fontawesome.css">
     <link rel="stylesheet" href="css/contents.css">
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/style.css&action=raw&ctype=text/css">-->
@@ -45,7 +45,8 @@
                     <p>Time: 7.14</p>
                     <p>Location: School Of Life Sciences, Peking University</p>
                     <div class="img">
-                        <img src="img/Collaboration/1.jpg">
+                        <!--<img src="img/Collaboration/1.jpg">-->
+                        <img src="http://2018.igem.org/wiki/images/d/df/T--DLUT_China_B--Collaboration1.jpg">
                     </div>
                     <p>As a senior igem team, Peking University has provided many reliable and effective suggestions for
                         our projects. After the introduction of the team project, we started brainstorming on the
@@ -64,8 +65,15 @@
                     <p>Location: The Meeting Room of Northeastern University Life Science Building</p>
                     <p>Participant: Four iGEM teams from Northeastern University and Dalian University of Technology</p>
                     <p>Content:</p>
-                    <div class="img"><img src="img/Collaboration/2.jpg"></div>
-                    <div class="img"><img src="img/Collaboration/3.jpg"></div>
+                    <div class="img">
+                        <!--<img src="img/Collaboration/2.jpg">-->
+                        <img src="http://2018.igem.org/wiki/images/e/e4/T--DLUT_China_B--Collaboration2.jpg">
+                    </div>
+                    <br>
+                    <div class="img">
+                        <!--<img src="img/Collaboration/3.jpg">-->
+                        <img src="http://2018.igem.org/wiki/images/4/4e/T--DLUT_China_B--Collaboration3.jpg">
+                    </div>
                     <p>The meeting began with the introduction of their project by the iGEM-A team of Northeastern
                         University. Team A's research project is engineering probiotics, and they expect to study
                         methods to alleviate inflammatory bowel disease (IBD) and prevent colorectal cancer (CRC) that
@@ -85,8 +93,15 @@
                         addition, team B students considered co-expression of Nanobodies with an enzyme to catalyze the
                         immobilization of Nanobodies with the addition of an aldehyde group at the end of the
                         Nanobody.</p>
-                    <div class="img"><img src="img/Collaboration/4.jpg"></div>
-                    <div class="img"><img src="img/Collaboration/5.jpg"></div>
+                    <div class="img">
+                        <!--<img src="img/Collaboration/4.jpg">-->
+                        <img src="http://2018.igem.org/wiki/images/b/b6/T--DLUT_China_B--Collaboration4.jpg">
+                    </div>
+                    <br>
+                    <div class="img">
+                        <!--<img src="img/Collaboration/5.jpg">-->
+                        <img src="http://2018.igem.org/wiki/images/2/27/T--DLUT_China_B--Collaboration5.jpg">
+                    </div>
                     <p>After the introduction of the team project, the students of the two schools raised questions and
                         discussed the contents of some projects. The students of the A team of Northeastern University
                         also took the opportunity to introduce some of the excellent genetic pathway design schemes of
@@ -103,8 +118,15 @@
             <div>
                 <h2 class="title">CCIC in Shanghai</h2>
                 <div class="mainText">
-                    <div class="img"><img src="img/Collaboration/6.jpg"></div>
-                    <div class="img"><img src="img/Collaboration/7.jpg"></div>
+                    <div class="img">
+                        <!--<img src="img/Collaboration/6.jpg">-->
+                        <img src="http://2018.igem.org/wiki/images/f/fd/T--DLUT_China_B--Collaboration6.jpg">
+                    </div>
+                    <br>
+                    <div class="img">
+                        <!--<img src="img/Collaboration/7.jpg">-->
+                        <img src="http://2018.igem.org/wiki/images/a/aa/T--DLUT_China_B--Collaboration7.jpg">
+                    </div>
                     <p>The CCIC exchange meeting was held at Shanghai University of Science and Technology. Two teams
                         from our school went to the conference. The team participated in the trouble shooting process,
                         shared some problems in the project with other teams, and got suggestions and help from other
@@ -125,8 +147,15 @@
                         promotional activities in Dalian, including posting comic posters "SPACESHIP E.coli" and iGEM
                         posters in various high schools in Dalian, and in 2018 10 , the results will be fed back to
                         OUC-China before the 3rd of the month.</p>
-                    <div class="img"><img src="img/Collaboration/8.jpg"></div>
-                    <div class="img"><img src="img/Collaboration/9.jpg"></div>
+                    <div class="img">
+                        <!--<img src="img/Collaboration/8.jpg">-->
+                        <img src="http://2018.igem.org/wiki/images/6/66/T--DLUT_China_B--Collaboration8.jpg">
+                    </div>
+                    <br>
+                    <div class="img">
+                        <!--<img src="img/Collaboration/9.jpg">-->
+                        <img src="http://2018.igem.org/wiki/images/f/f7/T--DLUT_China_B--Collaboration9.jpg">
+                    </div>
                 </div>
             </div>
         </div>
@@ -149,7 +178,6 @@
             <div id="qrCode">
                 <!--<div><img src="img/wechat.png" width="100"></div>-->
                 <div><img src="http://2018.igem.org/wiki/images/c/c6/T--DLUT_China_B--wechat.png" width="100"></div>
-
                 <div></div>
                 <!--<div><img src="img/weibo.png" width="100"></div>-->
                 <div><img src="http://2018.igem.org/wiki/images/6/6b/T--DLUT_China_B--weibo.png" width="100"></div>
