--- a/Education.html
+++ b/Education.html
@@ -6,8 +6,8 @@
     <title>Education</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/nav.css">
-    <link rel="stylesheet" href="css/bubbles.css">
-    <link rel="stylesheet" href="css/slideshow.css">
+    <!--<link rel="stylesheet" href="css/bubbles.css">-->
+    <!--<link rel="stylesheet" href="css/slideshow.css">-->
     <link rel="stylesheet" href="css/fontawesome.css">
     <link rel="stylesheet" href="css/contents.css">
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/style.css&action=raw&ctype=text/css">-->
@@ -52,10 +52,25 @@
                         mainly designed for people of different ages to understand their physical condition and for
                         understanding the market demand of our product. The results showed that a lot of people are
                         interested in our program which made the team members more motivated.</p>
-                    <div class="img"><img src="img/Education/1.jpg"></div>
-                    <div class="img"><img src="img/Education/2.jpg"></div>
-                    <div class="img"><img src="img/Education/3.jpg"></div>
-                    <div class="img"><img src="img/Education/4.jpg"></div>
+                    <div class="img">
+                        <!--<img src="img/Education/1.jpg">-->
+                        <img src="http://2018.igem.org/wiki/images/4/47/T--DLUT_China_B--Education1.jpg">
+                    </div>
+                    <br>
+                    <div class="img">
+                        <!--<img src="img/Education/2.jpg">-->
+                        <img src="http://2018.igem.org/wiki/images/3/36/T--DLUT_China_B--Education2.jpg">
+                    </div>
+                    <br>
+                    <div class="img">
+                        <!--<img src="img/Education/3.jpg">-->
+                        <img src="http://2018.igem.org/wiki/images/9/98/T--DLUT_China_B--Education3.jpg">
+                    </div>
+                    <br>
+                    <div class="img">
+                        <!--<img src="img/Education/4.jpg">-->
+                        <img src="http://2018.igem.org/wiki/images/9/95/T--DLUT_China_B--Education4.jpg">
+                    </div>
                 </div>
             </div>
 
@@ -82,12 +97,35 @@
                         biology.</p>
                     <p>We hoped that our iGEM publicity trip would arouse the students’ interest in synthetic biology
                         and contribute to the development of the iGEM competition in China.</p>
-                    <div class="img"><img src="img/Education/5.jpg"></div>
-                    <div class="img"><img src="img/Education/6.jpg"></div>
-                    <div class="img"><img src="img/Education/7.jpg"></div>
-                    <div class="img"><img src="img/Education/8.jpg"></div>
-                    <div class="img"><img src="img/Education/9.jpg"></div>
-                    <div class="img"><img src="img/Education/10.jpg"></div>
+                    <div class="img">
+                        <!--<img src="img/Education/5.jpg">-->
+                        <img src="http://2018.igem.org/wiki/images/a/a6/T--DLUT_China_B--Education5.jpg">
+                    </div>
+                    <br>
+                    <div class="img">
+                        <!--<img src="img/Education/6.jpg">-->
+                        <img src="http://2018.igem.org/wiki/images/0/0b/T--DLUT_China_B--Education6.jpg">
+                    </div>
+                    <br>
+                    <div class="img">
+                        <!--<img src="img/Education/7.jpg">-->
+                        <img src="http://2018.igem.org/wiki/images/7/7e/T--DLUT_China_B--Education7.jpg">
+                    </div>
+                    <br>
+                    <div class="img">
+                        <!--<img src="img/Education/8.jpg">-->
+                        <img src="http://2018.igem.org/wiki/images/5/58/T--DLUT_China_B--Education8.jpg">
+                    </div>
+                    <br>
+                    <div class="img">
+                        <!--<img src="img/Education/9.jpg">-->
+                        <img src="http://2018.igem.org/wiki/images/9/93/T--DLUT_China_B--Education9.jpg">
+                    </div>
+                    <br>
+                    <div class="img">
+                        <!--<img src="img/Education/10.jpg">-->
+                        <img src="http://2018.igem.org/wiki/images/2/2f/T--DLUT_China_B--Education10.jpg">
+                    </div>
                 </div>
             </div>
         </div>
@@ -110,7 +148,6 @@
             <div id="qrCode">
                 <!--<div><img src="img/wechat.png" width="100"></div>-->
                 <div><img src="http://2018.igem.org/wiki/images/c/c6/T--DLUT_China_B--wechat.png" width="100"></div>
-
                 <div></div>
                 <!--<div><img src="img/weibo.png" width="100"></div>-->
                 <div><img src="http://2018.igem.org/wiki/images/6/6b/T--DLUT_China_B--weibo.png" width="100"></div>
