--- a/HumanPractice.html
+++ b/HumanPractice.html
@@ -6,8 +6,8 @@
     <title>Human Practice</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/nav.css">
-    <link rel="stylesheet" href="css/bubbles.css">
-    <link rel="stylesheet" href="css/slideshow.css">
+    <!--<link rel="stylesheet" href="css/bubbles.css">-->
+    <!--<link rel="stylesheet" href="css/slideshow.css">-->
     <link rel="stylesheet" href="css/fontawesome.css">
     <link rel="stylesheet" href="css/contents.css">
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/style.css&action=raw&ctype=text/css">-->
@@ -53,11 +53,30 @@
                         by those aunts patiently. After we had a further communication with community residents by
                         interviewing them, we clearly felt that they had a deeper understanding of the dangers of CKD
                         and the importance of its early prevention,which means our practice is successful enough.</p>
-                    <div class="img"><img src="img/HumanPractice/1.jpg"></div>
-                    <div class="img"><img src="img/HumanPractice/2.jpg"></div>
-                    <div class="img"><img src="img/HumanPractice/3.jpg"></div>
-                    <div class="img"><img src="img/HumanPractice/4.png"></div>
-                    <div class="img"><img src="img/HumanPractice/5.png"></div>
+                    <div class="img">
+                        <!--<img src="img/HumanPractice/1.jpg">-->
+                        <img src="http://2018.igem.org/wiki/images/0/06/T--DLUT_China_B--HumanPractice1.jpg">
+                    </div>
+                    <br>
+                    <div class="img">
+                        <!--<img src="img/HumanPractice/2.jpg">-->
+                        <img src="http://2018.igem.org/wiki/images/2/20/T--DLUT_China_B--HumanPractice2.jpg">
+                    </div>
+                    <br>
+                    <div class="img">
+                        <!--<img src="img/HumanPractice/3.jpg">-->
+                        <img src="http://2018.igem.org/wiki/images/d/dc/T--DLUT_China_B--HumanPractice3.jpg">
+                    </div>
+                    <br>
+                    <div class="img">
+                        <!--<img src="img/HumanPractice/4.png">-->
+                        <a href="http://2018.igem.org/wiki/images/d/df/T--DLUT_China_B--HumanPractice4.png" target="_blank"><img src="http://2018.igem.org/wiki/images/d/df/T--DLUT_China_B--HumanPractice4.png"></a>
+                    </div>
+                    <br>
+                    <div class="img">
+                        <!--<img src="img/HumanPractice/5.png">-->
+                        <a href="http://2018.igem.org/wiki/images/0/0b/T--DLUT_China_B--HumanPractice5.png" target="_blank"><img src="http://2018.igem.org/wiki/images/0/0b/T--DLUT_China_B--HumanPractice5.png"></a>
+                    </div>
                 </div>
             </div>
 
@@ -110,7 +129,6 @@
             <div id="qrCode">
                 <!--<div><img src="img/wechat.png" width="100"></div>-->
                 <div><img src="http://2018.igem.org/wiki/images/c/c6/T--DLUT_China_B--wechat.png" width="100"></div>
-
                 <div></div>
                 <!--<div><img src="img/weibo.png" width="100"></div>-->
                 <div><img src="http://2018.igem.org/wiki/images/6/6b/T--DLUT_China_B--weibo.png" width="100"></div>
