--- a/Notebook.html
+++ b/Notebook.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Notebook</title>
-    <!--<link rel="stylesheet" href="css/style.css">-->
-    <!--<link rel="stylesheet" href="css/nav.css">-->
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/nav.css">
     <!--<link rel="stylesheet" href="css/bubbles.css">-->
     <!--<link rel="stylesheet" href="css/slideshow.css">-->
-    <!--<link rel="stylesheet" href="css/fontawesome.css">-->
-    <!--<link rel="stylesheet" href="css/contents.css">-->
-    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/style.css&action=raw&ctype=text/css">
-    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/nav.css&action=raw&ctype=text/css">
-    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/bubbles.css&action=raw&ctype=text/css">
-    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/slideshow.css&action=raw&ctype=text/css">
-    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/fontawesome.css&action=raw&ctype=text/css">
-    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/contents.css&action=raw&ctype=text/css">
+    <link rel="stylesheet" href="css/fontawesome.css">
+    <link rel="stylesheet" href="css/contents.css">
+    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/style.css&action=raw&ctype=text/css">-->
+    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/nav.css&action=raw&ctype=text/css">-->
+    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/bubbles.css&action=raw&ctype=text/css">-->
+    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/slideshow.css&action=raw&ctype=text/css">-->
+    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/fontawesome.css&action=raw&ctype=text/css">-->
+    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/contents.css&action=raw&ctype=text/css">-->
 
-    <!--<script src="js/jquery.js"></script>-->
+    <script src="js/jquery.js"></script>
     <!--<script src="js/slideshow.js"></script>-->
     <!--<script src="js/bubbles.js"></script>-->
     <!--<script src="js/typed.js"></script>-->
@@ -56,18 +56,18 @@
                     <h3 class="title">Self-assembly of the upper and lower slides</h3>
                     <p>DMOAP self-assembly of the upper slide: The cleaned slide is immersed in a 0.2% (v/v) DMOAP
                         aqueous solution, allowed to stand at room temperature for half an hour, rinsed with deionized
-                        water, dried by N2, and dried at 110℃ for 1 h. Dustproof and spare.</p>
+                        water, dried by N<sub>2</sub>, and dried at 110℃ for 1 h. Dustproof and spare.</p>
                     <p>APTES/DMOAP hybrid self-assembly of the lower slide: Immerse the cleaned slide in 3% (v/v) APTES
                         and 1% (v/v) DMOAP in 10 mmol/L acetic acid-sodium acetate solution (pH =5) The solution was
-                        incubated at 80℃ for 2 h, rinsed with deionized water, dried with N2, dried at 110℃ for 1 h,
-                        then immersed in 1% (v/v) GA solution for 37 h at 37℃. Ion water rinse, N2 blow dry, dustproof
+                        incubated at 80℃ for 2 h, rinsed with deionized water, dried with N<sub>2</sub>, dried at 110℃ for 1 h,
+                        then immersed in 1% (v/v) GA solution for 37 h at 37℃. Ion water rinse, N<sub>2</sub> blow dry, dustproof
                         and spare.</p>
                     <h3 class="title">Fixation of Nanobodies</h3>
                     <p>The Nanobody was dissolved in 0.01 mol/L of PBS buffer (pH=7.4) and configured to have different
                         concentrations of the Nanobody solution. Appropriate amount of Nano-antibody solution was added
                         dropwise to the surface of the lower slide, and reacted at 37℃ for 2 h. After removal, it was
                         washed with 0.01 mol/L PBS buffer (pH=7.4) and deionized water to remove unfixed Nanobody
-                        molecules. N2 is blown dry, placed at -20℃ for freezing or dustproof at room temperature.</p>
+                        molecules. N<sub>2</sub> is blown dry, placed at -20℃ for freezing or dustproof at room temperature.</p>
                     <h3 class="title">Production of liquid crystal cell</h3>
                     <p>The treated upper and lower slides were assembled face to face, and the slides were separated by
                         Mylar polyester sheets (intermediate open convex cavity), and the other three sides were fixed
@@ -204,18 +204,18 @@
                     <h3 class="title">Self-assembly of the upper and lower slides</h3>
                     <p>DMOAP self-assembly of the upper slide: The cleaned slide is immersed in a 0.2% (v/v) DMOAP
                         aqueous solution, allowed to stand at room temperature for half an hour, rinsed with deionized
-                        water, dried by N2, and dried at 110℃ for 1 h. Dustproof and spare.</p>
+                        water, dried by N<sub>2</sub>, and dried at 110℃ for 1 h. Dustproof and spare.</p>
                     <p>APTES/DMOAP hybrid self-assembly of the lower slide: Immerse the cleaned slide in 3% (v/v) APTES
                         and 1% (v/v) DMOAP in 10 mmol/L acetic acid-sodium acetate solution (pH =5) The solution was
-                        incubated at 80 °C for 2 h, rinsed with deionized water, dried with N2, dried at 110℃ for 1 h,
-                        then immersed in 1% (v/v) GA solution for 37 h at 37℃. Ion water rinse, N2 blow dry, dustproof
+                        incubated at 80 °C for 2 h, rinsed with deionized water, dried with N<sub>2</sub>, dried at 110℃ for 1 h,
+                        then immersed in 1% (v/v) GA solution for 37 h at 37℃. Ion water rinse, N<sub>2</sub> blow dry, dustproof
                         and spare.</p>
                     <h3 class="title">Immobilization of antigen</h3>
                     <p>The antigen was dissolved in 0.01 mol/L of PBS buffer (pH = 7.4) and configured to have different
                         concentrations of the antigen solution. An appropriate amount of the antigen solution was added
                         dropwise to the surface of the lower slide and reacted at 37℃ for 2 h. After taking out, they
                         were washed with 0.01 mol/L PBS buffer (pH=7.4) and deionized water, and the unfixed antigen
-                        molecules were removed, dried with N2 and stored at -20℃.</p>
+                        molecules were removed, dried with N<sub>2</sub> and stored at -20℃.</p>
                     <h3 class="title">Production of liquid crystal cell</h3>
                     <p>The treated upper and lower slides were assembled face to face, and the slides were separated by
                         Mylar polyester sheets (intermediate open convex cavity), and the other three sides were fixed
@@ -227,7 +227,7 @@
                     <p>According to the competitive immunoassay method, an appropriate amount of a certain concentration
                         of the nano-antibody solution was sequentially added dropwise to the slide to which the antigen
                         was immobilized, and reacted at 37℃ for 1 h. Rinse with 0.01 mol/L PBS buffer (pH=7.4) and
-                        deionized water to remove non-specific adsorbed substances, and dried with N2. A liquid crystal
+                        deionized water to remove non-specific adsorbed substances, and dried with N<sub>2</sub>. A liquid crystal
                         cell was prepared according to the method (4), and a change in color and brightness of the
                         liquid crystal film was observed using a polarizing microscope and image analysis was
                         performed.</p>
@@ -639,12 +639,12 @@
         <i class="fas fa-angle-up"></i>
     </div>
 
-    <!--<script src="js/script.js"></script>-->
-    <!--<script src="js/notebook.js"></script>-->
-    <!--<script src="js/contents.js"></script>-->
-    <script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/script.js&action=raw&ctype=text/javascript"></script>
-    <script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/contents.js&action=raw&ctype=text/javascript"></script>
-    <script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/notebook.js&action=raw&ctype=text/javascript"></script>
+    <script src="js/script.js"></script>
+    <script src="js/notebook.js"></script>
+    <script src="js/contents.js"></script>
+    <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/script.js&action=raw&ctype=text/javascript"></script>-->
+    <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/contents.js&action=raw&ctype=text/javascript"></script>-->
+    <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/notebook.js&action=raw&ctype=text/javascript"></script>-->
     <script>
         $(document).ready(function () {
             $(window).scroll(function () {
