--- a/TeamMembers.html
+++ b/TeamMembers.html
@@ -13,6 +13,7 @@
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/nav.css&action=raw&ctype=text/css">-->
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/slideshow.css&action=raw&ctype=text/css">-->
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/fontawesome.css&action=raw&ctype=text/css">-->
+    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/team.css&action=raw&ctype=text/css">-->
 
     <script src="js/jquery.js"></script>
     <!--<script src="js/typed.js"></script>-->
@@ -29,7 +30,7 @@
         <div class="title" id="teamName">DLUT China B</div>
         <div id="ourTeam">Our Team</div>
         <br>
-        <a class="btn" id="start">Get Started</a>
+        <a class="btn" id="start">Meet Us</a>
     </div>
 
     <div id="meetUs" class="mainText">
@@ -37,36 +38,55 @@
             <div class="tr">
                 <div class="td"></div>
                 <div class="td" id="img1">
-                    <img src="img/Team/14.jpg">
+                    <!--<img src="img/Team/14.jpg">-->
+                    <img src="http://2018.igem.org/wiki/images/b/bd/T--DLUT_China_B--Team14.jpg">
                     <div id="part1"><div class="intro"><p>Intro1</p></div></div>
                     <div id="part2"><div class="intro"><p>Intro2</p></div></div>
                 </div>
                 <div class="td"></div>
             </div>
             <div class="tr">
-                <div class="td" id="img2"><img src="img/Team/6.jpg"><div class="intro"><p>Intro3</p></div></div>
+                <div class="td" id="img2">
+                    <!--<img src="img/Team/6.jpg">-->
+                    <img src="http://2018.igem.org/wiki/images/e/ef/T--DLUT_China_B--Team6.jpg">
+                    <div class="intro"><p>Intro3</p></div>
+                </div>
                 <div class="td"></div>
-                <div class="td" id="img3"><img src="img/Team/7.jpg"><div class="intro"><p>Intro4</p></div></div>
+                <div class="td" id="img3">
+                    <!--<img src="img/Team/7.jpg">-->
+                    <img src="http://2018.igem.org/wiki/images/8/88/T--DLUT_China_B--Team7.jpg">
+                    <div class="intro"><p>Intro4</p></div>
+                </div>
             </div>
             <div class="tr">
                 <div class="td"></div>
                 <div class="td" id="img4">
-                    <img src="img/Team/17.jpg">
+                    <!--<img src="img/Team/17.jpg">-->
+                    <img src="http://2018.igem.org/wiki/images/0/09/T--DLUT_China_B--Team17.jpg">
                     <div id="part3"><div class="intro"><p>Intro5</p></div></div>
                     <div id="part4"><div class="intro"><p>Intro6</p></div></div>
                 </div>
                 <div class="td"></div>
             </div>
             <div class="tr">
-                <div class="td" id="img5"><img src="img/Team/16.jpg"><div class="intro"><p>Intro7</p></div></div>
+                <div class="td" id="img5">
+                    <!--<img src="img/Team/16.jpg">-->
+                    <img src="http://2018.igem.org/wiki/images/6/69/T--DLUT_China_B--Team16.jpg">
+                    <div class="intro"><p>Intro7</p></div>
+                </div>
                 <div class="td"></div>
-                <div class="td" id="img6"><img src="img/Team/5.jpg"><div class="intro"><p>Intro8</p></div></div>
+                <div class="td" id="img6">
+                    <!--<img src="img/Team/5.jpg">-->
+                    <img src="http://2018.igem.org/wiki/images/1/1a/T--DLUT_China_B--Team5.jpg">
+                    <div class="intro"><p>Intro8</p></div>
+                </div>
             </div>
             <div class="tr">
                 <div class="td"></div>
                 <div class="td" id="img7">
-                    <img src="img/Team/12.jpg">
-                    <div id="part5"><div class="intro"><p>Intro9Intro9Intro 9Intro9Intro9Intr o9Intr o9Intr o9Intro9Int ro9Intro 9Intro9I ntro9Int ro9Int ro 9Intro9 Intr o9 Int ro9In tro9  Intr o9Intr o9 Intro 9Intro9Intr o9Int ro9Int ro9Int ro9Int ro9Intro9Intro9 Intro 9Intro9I ntro9In tro9Intro9In tro 9Intro 9Intr o9Intro9Int ro9In tro9Int ro9In tro9</p></div></div>
+                    <!--<img src="img/Team/12.jpg">-->
+                    <img src="http://2018.igem.org/wiki/images/9/99/T--DLUT_China_B--Team12.jpg">
+                    <div id="part5"><div class="intro"><p>Int o9Int ro9Int ro9Int ro9Int ro9I ntro9In tro9Intro9In tro 9Intro 9Intr o9Intro9Int ro9In tro9Int ro9In tro9</p></div></div>
                     <div id="part6"><div class="intro"><p>Intro10</p></div></div>
                     <div id="part7"><div class="intro"><p>Intro11</p></div></div>
                 </div>
@@ -75,41 +95,39 @@
             <div class="tr">
                 <div class="td"></div>
                 <div class="td" id="img8">
-                    <img src="img/Team/15.jpg">
+                    <!--<img src="img/Team/15.jpg">-->
+                    <img src="http://2018.igem.org/wiki/images/5/58/T--DLUT_China_B--Team15.jpg">
                     <div id="part8"><div class="intro"><p>Intro12</p></div></div>
                 </div>
                 <div class="td"></div>
             </div>
-            <div class="tr">
-                <div class="td"></div>
-                <div class="td"></div>
-                <div class="td"></div>
-            </div>
-            <div class="tr">
-                <div class="td"></div>
-                <div class="td"></div>
-                <div class="td"></div>
-            </div>
-            <div class="tr">
-                <div class="td"></div>
-                <div class="td"></div>
-                <div class="td"></div>
-            </div>
         </div>
-        <div id="professors" class="mainText">
+        <div id="instructors" class="mainText">
             <div class="tr">
-                <div class="td" id="img9"><img src="img/Team/18.jpg" alt="">
-                    <div class="intro">Intro13</div></div>
+                <div class="td" id="img9">
+                    <!--<img src="img/Team/18.jpg">-->
+                    <img src="http://2018.igem.org/wiki/images/a/af/T--DLUT_China_B--Team18.jpg">
+                    <div class="intro">Intro13</div>
+                </div>
                 <div class="td"></div>
-                <div class="td" id="img10"><img src="img/Team/19.jpg" alt="">
-                    <div class="intro">Intro14</div></div>
+                <div class="td" id="img10">
+                    <!--<img src="img/Team/19.jpg">-->
+                    <img src="http://2018.igem.org/wiki/images/b/bc/T--DLUT_China_B--Team19.jpg">
+                    <div class="intro">Intro14</div>
+                </div>
             </div>
             <div class="tr">
-                <div class="td" id="img11"><img src="img/Team/20.jpg" alt="">
-                    <div class="intro">Intro15</div></div>
+                <div class="td" id="img11">
+                    <!--<img src="img/Team/20.jpg">-->
+                    <img src="http://2018.igem.org/wiki/images/e/ee/T--DLUT_China_B--Team20.jpg">
+                    <div class="intro">Intro15</div>
+                </div>
                 <div class="td"></div>
-                <div class="td" id="img12"><img src="img/Team/21.jpg" alt="">
-                    <div class="intro">Intro16</div></div>
+                <div class="td" id="img12">
+                    <!--<img src="img/Team/21.jpg">-->
+                    <img src="http://2018.igem.org/wiki/images/f/f4/T--DLUT_China_B--Team21.jpg">
+                    <div class="intro">Intro16</div>
+                </div>
             </div>
         </div>
     </div>
@@ -129,11 +147,11 @@
                 <p><i class="fab fa-weibo"></i> Weibo</p>
             </div>
             <div id="qrCode">
-                <div><img src="img/wechat.png" width="100"></div>
-                <!--<div><img src="http://2018.igem.org/wiki/images/c/c6/T&#45;&#45;DLUT_China_B&#45;&#45;wechat.png" width="100"></div>-->
+                <!--<div><img src="img/wechat.png" width="100"></div>-->
+                <div><img src="http://2018.igem.org/wiki/images/c/c6/T--DLUT_China_B--wechat.png" width="100"></div>
                 <div></div>
-                <div><img src="img/weibo.png" width="100"></div>
-                <!--<div><img src="http://2018.igem.org/wiki/images/6/6b/T&#45;&#45;DLUT_China_B&#45;&#45;weibo.png" width="100"></div>-->
+                <!--<div><img src="img/weibo.png" width="100"></div>-->
+                <div><img src="http://2018.igem.org/wiki/images/6/6b/T--DLUT_China_B--weibo.png" width="100"></div>
             </div>
         </div>
     </div>
@@ -157,8 +175,13 @@
 
         /*开始*/
         $('#start').click(function () {
-            $('html,body').animate({scrollTop: $('#meetUs').offset().top - 60}, 500);
+            $('html,body').animate({scrollTop: $('#meetUs').offset().top - 50}, 500);
         });
+        $(document).ready(function () {
+            $(window).scroll(function () {
+                topToggle();
+            });
+        })
     </script>
 </div>
 </body>
