--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/bubbles.css">
     <link rel="stylesheet" href="css/fontawesome.css">
-    <link rel="stylesheet" href="css/slideshow.css">
+    <!--<link rel="stylesheet" href="css/slideshow.css">-->
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/style.css&action=raw&ctype=text/css">-->
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/nav.css&action=raw&ctype=text/css">-->
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/bubbles.css&action=raw&ctype=text/css">-->
@@ -17,7 +17,7 @@
 
     <script src="js/jquery.js"></script>
     <script src="js/bubbles.js"></script>
-    <script src="js/slideshow.js"></script>
+    <!--<script src="js/slideshow.js"></script>-->
     <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/slideshow.js&action=raw&ctype=text/javascript"></script>-->
     <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/bubbles.js&action=raw&ctype=text/javascript"></script>-->
 
@@ -38,56 +38,98 @@
 <body onload="check()">
 <div id="dlutb">
     <div id="header">
-        <div id="box">
-            <div id="box_img">
-                <ul></ul>
-            </div>
-            <div id="word">
-                <ul></ul>
-            </div>
-            <div id="controller">
-                <div id="backward"><i class="fas fa-angle-left"></i></div>
-                <div id="forward"><i class="fas fa-angle-right"></i></div>
-            </div>
-            <script>
-                let data = [
-                    {
-                        //"src": "http://2018.igem.org/wiki/images/1/1a/T--DLUT_China_B--Top1.jpg",
-                        "src": "img/Top1.png",
-                        "title": "DLUT China B",
-                        "description": "DLUT China B",
-                    },
-                    {
-                        // "src": "http://2018.igem.org/wiki/images/0/04/T--DLUT_China_B--Top2.jpg",
-                        "src": "img/Top2.jpg",
-                        "title": "Principle",
-                        "description": "Principle.",
-                    }
-                ];
-                $(document).ready(slideshow(data));
-            </script>
-        </div>
-
         <div id="nav"></div>
+        <div id="box">
+            <img src="img/Top1.png">
+            <!--<img src="http://2018.igem.org/wiki/images/4/47/T&#45;&#45;DLUT_China_B&#45;&#45;Top1.png">-->
+            <div id="word">
+                <h2>DLUT China B</h2>
+                <p>DLUT China B</p>
+            </div>
+        </div>
+        <!--<div id="box">-->
+        <!--<div id="box_img">-->
+        <!--<ul></ul>-->
+        <!--</div>-->
+        <!--<div id="word">-->
+        <!--<ul></ul>-->
+        <!--</div>-->
+        <!--<div id="controller">-->
+        <!--<div id="backward"><i class="fas fa-angle-left"></i></div>-->
+        <!--<div id="forward"><i class="fas fa-angle-right"></i></div>-->
+        <!--</div>-->
+        <!--<script>-->
+        <!--let data = [-->
+        <!--{-->
+        <!--//"src": "http://2018.igem.org/wiki/images/1/1a/T&#45;&#45;DLUT_China_B&#45;&#45;Top1.jpg",-->
+        <!--"src": "img/Top1.png",-->
+        <!--"title": "DLUT China B",-->
+        <!--"description": "DLUT China B",-->
+        <!--},-->
+        <!--{-->
+        <!--// "src": "http://2018.igem.org/wiki/images/0/04/T&#45;&#45;DLUT_China_B&#45;&#45;Top2.jpg",-->
+        <!--"src": "img/Top2.jpg",-->
+        <!--"title": "Principle",-->
+        <!--"description": "Principle.",-->
+        <!--}-->
+        <!--];-->
+        <!--$(document).ready(slideshow(data));-->
+        <!--</script>-->
+        <!--</div>-->
         <br>
     </div>
 
-    <h2 class="title">Circles</h2>
     <div id="circle">
         <div class="tr">
-            <div class="td"><img src="img/Circle1.png" width="300"></div>
-            <div class="td"><img src="img/Circle2.png" width="300"></div>
-            <div class="td"><img src="img/Circle3.png" width="300"></div>
+            <div class="td">
+                <a href="http://2018.igem.org/Team:DLUT_China_B/Description">
+                    <!--<img src="img/Circle1.png" width="250">-->
+                    <img src="http://2018.igem.org/wiki/images/b/b8/T--DLUT_China_B--Circle1.png" width="250">
+                    <div>Project</div>
+                </a>
+            </div>
+            <div class="td">
+                <a href="http://2018.igem.org/Team:DLUT_China_B/PartsOverview">
+                    <!--<img src="img/Circle2.png" width="250">-->
+                    <img src="http://2018.igem.org/wiki/images/f/f0/T--DLUT_China_B--Circle2.png" width="250">
+                    <div>Parts</div>
+                </a>
+            </div>
+            <div class="td">
+                <a href="http://2018.igem.org/Team:DLUT_China_B/ConditionOptimization">
+                    <!--<img src="img/Circle3.png" width="250">-->
+                    <img src="http://2018.igem.org/wiki/images/c/c6/T--DLUT_China_B--Circle3.png" width="250">
+                    <div>Model</div>
+                </a>
+            </div>
         </div>
         <div class="tr">
-            <div class="td"><img src="img/Circle4.png" width="300"></div>
-            <div class="td"><img src="img/Circle5.png" width="300"></div>
-            <div class="td"><img src="img/Circle6.png" width="300"></div>
+            <div class="td">
+                <a href="http://2018.igem.org/Team:DLUT_China_B/AppliedDesign">
+                    <!--<img src="img/Circle4.png" width="250">-->
+                    <img src="http://2018.igem.org/wiki/images/7/71/T--DLUT_China_B--Circle4.png" width="250">
+                    <div>Awards</div>
+                </a>
+            </div>
+            <div class="td">
+                <a href="http://2018.igem.org/Team:DLUT_China_B/HumanPractice">
+                    <!--<img src="img/Circle5.png" width="250">-->
+                    <img src="http://2018.igem.org/wiki/images/6/63/T--DLUT_China_B--Circle5.png" width="250">
+                    <div>Human Practice</div>
+                </a>
+            </div>
+            <div class="td">
+                <a href="http://2018.igem.org/Team:DLUT_China_B/TeamMembers">
+                    <!--<img src="img/Circle6.png" width="250">-->
+                    <img src="http://2018.igem.org/wiki/images/0/06/T--DLUT_China_B--Circle6.png" width="250">
+                    <div>Team</div>
+                </a>
+            </div>
         </div>
     </div>
 
     <div>
-        <h2 class="title">Chat Bubbles</h2>
+        <h2 class="title">Click bubbles to chat with me</h2>
         <div id="chatBubbles"></div>
     </div>
 
