增加Parts页，修正Team Members页，Notebook页加入时间线，弃用<nav>标签。

--- a/Collaboration.html
+++ b/Collaboration.html
@@ -37,7 +37,7 @@
     </div>
 
     <div id="mainBody">
-        <nav id="contents"></nav>
+        <div id="contents"></div>
         <div id="article">
             <div>
                 <h2 class="title">Collaboration with Peking University</h2>
