--- a/DescriptionPage.html
+++ b/DescriptionPage.html
@@ -88,7 +88,7 @@
                         </div>
 
                         <div id="mainBody">
-                            <nav id="contents"></nav>
+                            <div id="contents"></div>
                             <div id="article">
                                 <div>
                                     <h2 class="title">We are concerned about the world's largest potential group of chronic kidney
