--- a/Notebook.html
+++ b/Notebook.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Notebook</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/nav.css">
+    <!--<link rel="stylesheet" href="css/style.css">-->
+    <!--<link rel="stylesheet" href="css/nav.css">-->
     <!--<link rel="stylesheet" href="css/bubbles.css">-->
     <!--<link rel="stylesheet" href="css/slideshow.css">-->
-    <link rel="stylesheet" href="css/fontawesome.css">
-    <link rel="stylesheet" href="css/contents.css">
-    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/style.css&action=raw&ctype=text/css">-->
-    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/nav.css&action=raw&ctype=text/css">-->
+    <!--<link rel="stylesheet" href="css/fontawesome.css">-->
+    <!--<link rel="stylesheet" href="css/contents.css">-->
+    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/style.css&action=raw&ctype=text/css">
+    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/nav.css&action=raw&ctype=text/css">
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/bubbles.css&action=raw&ctype=text/css">-->
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/slideshow.css&action=raw&ctype=text/css">-->
-    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/fontawesome.css&action=raw&ctype=text/css">-->
-    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/contents.css&action=raw&ctype=text/css">-->
+    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/fontawesome.css&action=raw&ctype=text/css">
+    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/contents.css&action=raw&ctype=text/css">
 
-    <script src="js/jquery.js"></script>
+    <!--<script src="js/jquery.js"></script>-->
     <!--<script src="js/slideshow.js"></script>-->
     <!--<script src="js/bubbles.js"></script>-->
     <!--<script src="js/typed.js"></script>-->
@@ -37,7 +37,7 @@
     </div>
 
     <div id="mainBody">
-        <nav id="contents"></nav>
+        <div id="contents"></div>
         <div id="article">
             <div class="mainText">
                 <p>Based on the previous literature and preliminary experiments to determine the concentration of DMOAP
@@ -81,7 +81,7 @@
             <div>
                 <h2 class="title">Optimization of Experimental Conditions</h2>
                 <div class="mainText">
-                    <h3 class="title">Explore the appropriate antibody concentration</h3>
+                    <h3 class="title time">Explore the appropriate antibody concentration</h3>
                     <p>Time:</p>
                     <ul>
                         <li>20 July: Antibody concentration 50ng/ml. Antibody concentration 200ng/ml.</li>
@@ -127,7 +127,7 @@
                     <p class="footnote"><b>Figure 2</b> Effect of high antibody concentration on liquid crystal
                         alignment</p>
 
-                    <h3 class="title">Explore the appropriate antibody concentration</h3>
+                    <h3 class="title time">Explore the appropriate antibody concentration</h3>
                     <p>Time:</p>
                     <ul>
                         <li>23 Aug: Antibody concentration 125ng/ml. Antibody concentration 2000ng/ml.</li>
@@ -158,7 +158,7 @@
                         ng/mL</p>
                     <p class="footnote"><b>Figure 3</b> Effect of antigen concentration on liquid crystal alignment</p>
 
-                    <h3 class="title">DMOAP interference exclusion experiment</h3>
+                    <h3 class="title time">DMOAP interference exclusion experiment</h3>
                     <p>Time:</p>
                     <ul>
                         <li>25 Aug: Antibody concentration 500ng/ml.</li>
@@ -235,7 +235,7 @@
             </div>
 
             <div>
-                <h2 class="title">Experiment of Suitable Antigen Concentration</h2>
+                <h2 class="title time">Experiment of Suitable Antigen Concentration</h2>
                 <div class="mainText">
                     <p>Time:</p>
                     <ul>
@@ -299,7 +299,7 @@
             </div>
 
             <div>
-                <h2 class="title">Experiment of Suitable Nanobody Concentration</h2>
+                <h2 class="title time">Experiment of Suitable Nanobody Concentration</h2>
                 <div class="mainText">
                     <p>Time:</p>
                     <ul>
@@ -353,7 +353,7 @@
             </div>
 
             <div>
-                <h2 class="title">Verify Antigen Concentration Experiment</h2>
+                <h2 class="title time">Verify Antigen Concentration Experiment</h2>
                 <div class="mainText">
                     <p>Time:</p>
                     <ul>
@@ -443,7 +443,7 @@
             </div>
 
             <div>
-                <h2 class="title">Explore the Appropriate Concentration of Nanobodies Again</h2>
+                <h2 class="title time">Explore the Appropriate Concentration of Nanobodies Again</h2>
                 <div class="mainText">
                     <p>Time:</p>
                     <ul>
@@ -494,7 +494,7 @@
             </div>
 
             <div>
-                <h2 class="title">The Influence of GA and APTES</h2>
+                <h2 class="title time">The Influence of GA and APTES</h2>
                 <div class="mainText">
                     <p>Time:</p>
                     <ul>
@@ -555,7 +555,7 @@
             </div>
 
             <div>
-                <h2 class="title">Study on Antigen Concentration and Fixed Time</h2>
+                <h2 class="title time">Study on Antigen Concentration and Fixed Time</h2>
                 <div class="mainText">
                     <p>Time:</p>
                     <ul>
@@ -639,12 +639,14 @@
         <i class="fas fa-angle-up"></i>
     </div>
 
-    <script src="js/script.js"></script>
-    <script src="js/notebook.js"></script>
-    <script src="js/contents.js"></script>
-    <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/script.js&action=raw&ctype=text/javascript"></script>-->
+    <!--<script src="js/script.js"></script>-->
+    <!--<script src="js/notebook.js"></script>-->
+    <!--<script src="js/contents.js"></script>-->
+    <!--<script src="js/timeline.js"></script>-->
+    <script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/script.js&action=raw&ctype=text/javascript"></script>
     <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/contents.js&action=raw&ctype=text/javascript"></script>-->
-    <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/notebook.js&action=raw&ctype=text/javascript"></script>-->
+    <script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/notebook.js&action=raw&ctype=text/javascript"></script>
+    <script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/timeline.js&action=raw&ctype=text/javascript"></script>
     <script>
         $(document).ready(function () {
             $(window).scroll(function () {
