--- a/TeamMembers.html
+++ b/TeamMembers.html
@@ -68,6 +68,7 @@
                 </div>
                 <div class="td"></div>
             </div>
+
             <div class="tr">
                 <div class="td" id="img5">
                     <!--<img src="img/Team/16.jpg">-->
@@ -101,32 +102,42 @@
                 </div>
                 <div class="td"></div>
             </div>
+            <div class="tr">
+                <div class="td"></div>
+                <div class="td" id="img9">
+                    <!--<img src="img/Team/10.jpg">-->
+                    <img src="http://2018.igem.org/wiki/images/f/fb/T--DLUT_China_B--Team10.jpg">
+                    <div id="part9"><div class="intro"><p>Intro13</p></div></div>
+                    <div id="part10"><div class="intro"><p>Intro14</p></div></div>
+                </div>
+                <div class="td"></div>
+            </div>
         </div>
         <div id="instructors" class="mainText">
             <div class="tr">
-                <div class="td" id="img9">
+                <div class="td" id="img10">
                     <!--<img src="img/Team/18.jpg">-->
                     <img src="http://2018.igem.org/wiki/images/a/af/T--DLUT_China_B--Team18.jpg">
-                    <div class="intro">Intro13</div>
-                </div>
-                <div class="td"></div>
-                <div class="td" id="img10">
-                    <!--<img src="img/Team/19.jpg">-->
-                    <img src="http://2018.igem.org/wiki/images/b/bc/T--DLUT_China_B--Team19.jpg">
-                    <div class="intro">Intro14</div>
-                </div>
-            </div>
-            <div class="tr">
-                <div class="td" id="img11">
-                    <!--<img src="img/Team/20.jpg">-->
-                    <img src="http://2018.igem.org/wiki/images/e/ee/T--DLUT_China_B--Team20.jpg">
                     <div class="intro">Intro15</div>
                 </div>
                 <div class="td"></div>
+                <div class="td" id="img11">
+                    <!--<img src="img/Team/19.jpg">-->
+                    <img src="http://2018.igem.org/wiki/images/b/bc/T--DLUT_China_B--Team19.jpg">
+                    <div class="intro">Intro16</div>
+                </div>
+            </div>
+            <div class="tr">
                 <div class="td" id="img12">
+                    <!--<img src="img/Team/20.jpg">-->
+                    <img src="http://2018.igem.org/wiki/images/e/ee/T--DLUT_China_B--Team20.jpg">
+                    <div class="intro">Intro17</div>
+                </div>
+                <div class="td"></div>
+                <div class="td" id="img13">
                     <!--<img src="img/Team/21.jpg">-->
                     <img src="http://2018.igem.org/wiki/images/f/f4/T--DLUT_China_B--Team21.jpg">
-                    <div class="intro">Intro16</div>
+                    <div class="intro">Intro18</div>
                 </div>
             </div>
         </div>
