--- a/Education.html
+++ b/Education.html
@@ -37,7 +37,7 @@
     </div>
 
     <div id="mainBody">
-        <nav id="contents"></nav>
+        <div id="contents"></div>
         <div id="article">
             <div>
                 <h2 class="title">Publicity on Campus Open Day</h2>
